--- a/web/db/데이터베이스 일대다 관계.md
+++ b/web/db/데이터베이스 일대다 관계.md
@@ -9,7 +9,7 @@ class Comment(models.Model):
     content = models.CharField(max_length=100)
     created_at = models.DateTimeField(auto_now_add=True)
     updated_at = models.DateTimeField(auto_now=True)
-    board = models.ForeignKey(Board, on_delete=models.CASCADE
+    board = models.ForeignKey(Board, on_delete=models.CASCADE)
 ```
 
 
@@ -70,7 +70,7 @@ $ python manage.py migrate
 
      ```sql
      >> board = Board.objects.get(pk=1)
-     >> comment = comment(content='댓글', board=board)
+     >> comment = Comment(content='댓글', board=board)
      >> comment.save()
      >> comment.pk
      1
