--- a/Arduino/3. 아두이노 기본.md
+++ b/Arduino/3. 아두이노 기본.md
@@ -1,4 +1,6 @@
-# 190616_Study
+# Arduino
+
+## day3_2019-06-16
 
 * 녹색 전원 LED가 켜져 있기는 하지만 핀 13 LED가 깜박이지 않는다면 팩토리 코드가 칩에 로드되어 있지 않은 경우를 가정할 수 있다.
 
