--- a/상반기/Algorithm/08 SW 문제해결 응용_1.md
+++ b/상반기/Algorithm/08 SW 문제해결 응용_1.md
@@ -5,7 +5,7 @@
 ### 문제 해결 역량
 
 * 프로그램을 하기 위한 많은 제약조건과 요구사항을 이해하고 최선의 방법을 찾아내는 능력
-* 프ㅗㄹ그래머가 사용하는 언어나 라이브러리, 자료구조, 알고리즘에 대한 지식을 적재적소에 퍼즐을 배치하듯 이들을 연결하여 큰 그림을 만드는 능력
+* 프로그래머가 사용하는 언어나 라이브러리, 자료구조, 알고리즘에 대한 지식을 적재적소에 퍼즐을 배치하듯 이들을 연결하여 큰 그림을 만드는 능력
 * 추상적인 기술
 * 훈련이 필요하다
 
