--- a/ML/03. How to minimize cost.md
+++ b/ML/03. How to minimize cost.md
@@ -104,7 +104,7 @@
     plt.show()
     ```
 
-    ![03_cost_function_graph](imgs/03_cost_function_graph.png)
+    ![03_cost_function_graph](./imgs/03_cost_function_graph.png)
 
   * Grandient descent
 
@@ -165,7 +165,7 @@
       * cost 값이 작아지고
       * W 가 1에 가까워지는것을 확인 할수 있다.
 
-    ![03_gradient_descent](imgs/03_gradient_descent.png) 
+    ![03_gradient_descent](./imgs/03_gradient_descent.png) 
 
     * cost(W) 함수를 미분한 cost 함수를 사용하지 않는 code (미분을 해주는 함수 이용)
 
@@ -205,7 +205,7 @@
 
         * W 값이 5에서 1로 수렴해 가는것을 확인 할 수 있다
 
-        ![03_gradient_descent_optimizer](imgs/03_gradient_descent_optimizer.png)
+        ![03_gradient_descent_optimizer](./imgs/03_gradient_descent_optimizer.png)
 
 
 
@@ -257,6 +257,6 @@
 
     * step, [ gradient, W, [ optimizer, ->결과 W] ]
 
-      ![03_optional](imgs/03_optional.png)
+      ![03_optional](./imgs/03_optional.png)
 
     
