--- a/ML/04. Multivariable Linear Regression.md
+++ b/ML/04. Multivariable Linear Regression.md
@@ -165,7 +165,7 @@
       * 많이 실행을 킬수록 cost가 낮아짐
       * Y 값에 수렴하며 유사해 지는것을 확인 할 수 있다
 
-    ![](imgs/04_multivariavle_linear_regression_result.png)
+    ![result](./imgs/04_multivariavle_linear_regression_result.png)
 
     
 
@@ -216,7 +216,7 @@
 
     * 결과
 
-      ![](imgs/04_multivariavle_linear_regression_result_Matrix.png)]
+      ![result](./imgs/04_multivariavle_linear_regression_result_Matrix.png)]
 
   
 
@@ -275,7 +275,7 @@
 
   * 결과
 
-    ![](imgs/04_multivariable_linear_regression_ loading_data_from_file.png)
+    ![result](./imgs/04_multivariable_linear_regression_ loading_data_from_file.png)
 
   * 학습된 hypothesis 사용하여 예측값 받아보기
 
@@ -286,7 +286,7 @@
     print("Other scores will be", sess.run(hypothesis, feed_dict={X:[[60, 70, 110], [90, 100, 80]]}))
     ```
 
-    ![](imgs/04_multivariable_linear_regression_ loading_data_from_file_using_hypothesis.png)
+    ![hypothesis test](./imgs/04_multivariable_linear_regression_ loading_data_from_file_using_hypothesis.png)
 
   
 
