--- a/ML/05. Logistic (regression) classifier.md
+++ b/ML/05. Logistic (regression) classifier.md
@@ -22,13 +22,13 @@
 
   * Pass 와 Fail을 나뉘는 시간을 잡아 Linear Model 의 가설 설정 가능
 
-    ![Classifiatioin with linearRegressionGraph](/Users/leejuho/Desktop/Til/ML/imgs/05_classificatioin_linear_regression.png)
+    ![Classifiatioin with linearRegressionGraph](./imgs/05_classificatioin_linear_regression.png)
 
   * 문제점
 
     1. 50시간 과 같은 큰 입력값에 대해서도 1의 값으로 결과가 나와야함으로 기울기에 의해 합/불 판단의 기준이 변화하여 합격 데이터가 불합격으로 판단 될 수 있다.
 
-       ![error1](/Users/leejuho/Desktop/Til/ML/imgs/05_linear_regression_error1.png)
+       ![error1](./imgs/05_linear_regression_error1.png)
 
     2. 'H(x) = Wx + b' 모델은 1 이상의 값이 결과로 나올 수 있다. 
        - 학습 데이터 x = [1, 2, 5, 10] => 모델 W=0.5
@@ -44,7 +44,7 @@
     g(z)= \frac{1}{1+e^{-z}}
   $$
   
-    ![logistic/sigmoid function](/Users/leejuho/Desktop/Til/ML/imgs/05_logistic:sigmoid_function.png)
+    ![logistic/sigmoid function](./imgs/05_logistic:sigmoid_function.png)
   
     * Sigmod : Curvered in two directions, like the letter 'S', or the Greek sigma
   
@@ -80,7 +80,7 @@
 
     * 기울기가 0인 부분으로 최저점을 찾을 시, 여러 구간이 나타나게 됨
 
-      ![non-convex graph](/Users/leejuho/Desktop/Til/ML/imgs/05_nonconvex_graph.png)
+      ![non-convex graph](./imgs/05_nonconvex_graph.png)
 
     * Gradient decsent algorithm 사용 불가능
 
@@ -115,7 +115,7 @@
       g(z) = -log(z)
       $$
 
-      ![logFunction1](/Users/leejuho/Desktop/Til/ML/imgs/05_log_function_1.png)
+      ![logFunction1](./imgs/05_log_function_1.png)
 
       * z = 0 -> g(0) = ∞
       * z = 1 -> g(1) = 0
@@ -124,7 +124,7 @@
       g(z) = -log(1-z)
       $$
 
-      ![logFunction2](/Users/leejuho/Desktop/Til/ML/imgs/05_log_function_2.png)
+      ![logFunction2](./imgs/05_log_function_2.png)
 
       * z = 0 -> g(0) = 0
       * z = 1 -> g(1) = ∞
@@ -269,7 +269,7 @@
 
   * 결과
 
-    ![result](/Users/leejuho/Desktop/Til/ML/imgs/05_tensor_result.png)
+    ![result](./imgs/05_tensor_result.png)
 
     
 
