--- a/C:C++/따배씨/3_데이터와 C언어.md
+++ b/C:C++/따배씨/3_데이터와 C언어.md
@@ -183,3 +183,287 @@ int main()
     * 하드웨어의 발전으로 64bit Double Precision의 동작도 빨라지는 추세
     * but, 복잡한 프로그램 개발시 Double의 남용은 위험
 
+
+
+##### 3.6 정수의 오버플로우
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    unsigned int i = 0;
+    
+    printf("%u\n", sizeof(unsigned int));	// 4
+    printf("%u", sizeof(i));	// 4
+
+    return 0;
+}
+```
+
+* 출력하려는 데이터가 unsigned 라서 %u 를 사용하여 출력
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+    unsigned int i = 0b11111111111111111111111111111111;
+//    이진수 입력법, C언어의 표준은 아니지만 대부분의 프로그래머들이 사용하기 때문에 지원
+    unsigned int u = UINT_MAX;
+    
+    printf("%u\n", i);  // 4294967295
+    printf("%u\n", u);  // 4294967295
+    
+    printf("%d", i); // -1
+    
+    return 0;
+}
+```
+
+* unsigned int i의 최대값, 2진수 32bit = 0b11111111111111111111111111111111
+* limits Header를 이용하여 자료값의 최대값 호출  = UNIT_MAX
+* %u 가 아닌 %d 로 최대값을 출력시 "-1" 출력으로 오류발생
+  * signed int 값과 unsigned int 값의 최대값 범위가 다르기 때문
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+    unsigned int u_max = UINT_MAX;
+    unsigned int u_min = 0;
+    
+    signed int i_max = INT_MAX;
+    signed int i_min = INT_MIN;
+    
+    printf("max of unit = %u\n", u_max);  // 4294967295
+    printf("max of int =  %d\n", i_max);  // 2147483647
+    
+    printf("min of unit = %u\n", u_min);  // 0
+    printf("min of int =  %d\n", i_min);  // -2147483648
+    
+    return 0;
+}
+```
+
+* unsigned int 의 범위: 0 <= u <= 4294967295
+* signed int 의 범위: -2147483648 <= i <= 2147483647
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+    unsigned int u_max = UINT_MAX+1;
+    unsigned int u_min = 0 - 1;
+    
+    printf("max + 1: %u\n", u_max);	// 0
+    printf("min - 1: %u\n", u_min); // 4294967295
+    
+    return 0;
+}
+```
+
+* Overflow 상황 발생
+  * max + 1 -> 0b11111111111111111111111111111111 + 1
+    * 32bit를 초과한 숫자인 0b100000000000000000000000000000000 가 됨
+    * 초과한 자리수인 33bit는 제외되어 남은 수인 0이 됨
+  * min - 1 -> 0b00000000000000000000000000000000 - 1
+    * 33bit 자리 수 1이 있다고 가정을 하고 -1 연산 진행
+    * 그 결과 32bit의 가장 큰 수가 됨
+
+
+
+##### 3.7 다양한 정수형들
+
+![3_6_1_정수자료형](./imgs/3_6_1_정수자료형.png)
+
+* 4byte Int 형이 기본
+  * 4byte int 형의 범위는 long과 같아서 int를 많이 사용하고 long의 사용빈도가 줄어듬
+* 1byte = 8bit
+* short: 절반
+* long: 두배
+* 큰 자료형의 값을 작은 자료형의 형식 지정자로 호출하면 문제 발생
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+  char c = 65;
+  short s = 200;
+  unsigned ui = 3000000000U;
+  // 3'000'000'000U
+  long l = 65537L;
+  long long ll = 12345678908642LL;
+  // 12'345'678'908'642ll;
+  
+  printf("char = %hhd, %d, %c\n", c, c, c);
+  //	char = 65, 65, A
+
+  printf("short = %hhd, %hd, %d\n", s, s, s);
+  // short = -56, 200, 200
+
+  printf("unsigned int = %u, %d\n", ui, ui);
+  // unsigned int = 3000000000, -1294967296
+
+  printf("long = %ld, %hd\n", l, l);
+  // long = 65537, 1
+
+  printf("long long = %lld, %d\n", ll, ll);
+  // long long = 12345678908642, 1942899938
+    
+    return 0;
+}
+```
+
+* 자료형과 형식지정자를 맞춰 사용햐지 않으면 정확하게 출력되지 않음
+
+
+
+##### 3.8 8진수와 16진수
+
+![3_6_8_진수테이블](./imgs/3_6_8_진수테이블.png)
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+  unsigned int decimal = 4294967295;\
+    unsigned int binary = 0b11111111111111111111111111111111;
+  unsigned int oct = 037777777777;
+  unsigned int hex = 0xffffffff;
+    
+	printf("%u\n", decimal); // 4294967295
+	printf("%u\n", binary);	// 4294967295
+	printf("%u\n", oct);	// 4294967295
+	printf("%u\n", hex);	// 4294967295	
+    
+	printf("%o\n", decimal);
+  // 37777777777
+  printf("%x\n", decimal);
+  // ffffffff
+	printf("%#o\n", decimal);
+  // 037777777777
+	printf("%#x\n", decimal);
+  // 0xffffffff
+	printf("%#X\n", decimal);
+  //	0XFFFFFFFF
+    return 0;
+}
+```
+
+* %#
+  * prefix
+  * 출력 시 입력할 때와 같이 명확히 진수를 표현해주는 방법
+  * 대문를 사용하면 대문자로 출력
+
+
+
+##### 3.9 이식성이 높은 고정 너비 정수
+
+* C 언어는 각 자료형의 최소 메모리 크기만을 규정
+  * 여러 시스템에서 자료형의 사이즈가 모두 다를 수 있다
+  * 이식성이 낮음: 다른 시스템에서 작동하지 않을 가능성이 있음
+* 고정 너비 정수형: 변수, 자료형의 사이즈를 명확하게 고정하여 사용
+
+
+
+```c
+#include <stdio.h>
+#include <limits.h>
+#include <inttypes.h>
+
+int main()
+{
+	int i;
+	int32_t i32;        // 32 bit interger
+	int_least8_t i8;    // smallest 8 bit
+	int_fast8_t f8;     // fastest minimum
+	intmax_t imax;      // biggest signed intergers
+	uintmax_t uimax;    // biggest unsigned integers
+    
+  i32 = 1004;
+    
+	printf("me32 = %d\n", i32);
+  // me32 = 1004
+	printf("me32 = %" "d" "\n", i32);
+  // me32 = 1004
+	printf("me32 = %" PRId32 "\n", i32);
+  // me32 = 1004
+    
+	return 0;
+}
+```
+
+* 고정 너비 정수형들은 새로운 자료형을 만드는것이 아니라 명확히 정의하는 것
+
+* printf() 함수를 사용 할때 형식 지정자에 문제 발생
+
+  * printf("me32 = %d\n", i32);
+
+    -> "me32 = %d\n"
+
+    -> "me32 = %"	"d"	"\n"
+
+    -> "me32 = %"	PRId32	"\n"
+
+  * PRId32 - 32bit 정수형을 printf로 출력 할때, 메크로를 사용하여 고정 넓이 정수를 편하게 출력 가능
+
+    * PRI - print
+    * d - decimal
+    * 32 - 32bit
+
+
+
+##### 3.10 문자형
+
+* ASCII Chart
+  * 컴퓨터 내부적으로 문자를 2진수로 바꿔서 저장하고 처리
+  * 문자형도 정수형의 일부인것 처럼 분류를 하는것이 일반적
+  * 숫자와 문자의 대응을 나타낸 표를 ASCII Chart 라고 함
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    char c = 'A';
+    char d = 65; // d = 'A'
+    
+    printf("%c %hhd\n", c, c);
+    printf("%c %hhd\n", d, d);
+    
+    char a = '\a';
+    printf("%c", a); // == printf("\07"); == printf("x7");
+    
+    
+    return 0;
+}
+```
+
+* escape Sequence
+  * \a - 소리 출력
+  * \b - 커서 왼쪽으로 한칸
+  * \t - 탭 입력
+  * \ \ - 백슬러쉬 출력
+  * \? - 물음표 출력
