210309|C 따배씨 3강 완료

--- a/C:C++/따배씨/3_데이터와 C언어.md
+++ b/C:C++/따배씨/3_데이터와 C언어.md
@@ -467,3 +467,208 @@ int main()
   * \t - 탭 입력
   * \ \ - 백슬러쉬 출력
   * \ ? - 물음표 출력
+
+
+
+##### 3.11 부동소수점형
+
+- 과학적 표기법  Scientific Notations
+
+  - m X 10^n
+    - m: significand
+    - n: exponent
+  - 123.45 = 12345 X 10^-2 = 1.2345 X 10^2
+  - 유효숫자 5개: 1.2345 X 10^2
+  - 유효숫자 6개: 1.23450 X 10^2
+
+- 4 byte (32 bit) 부동소수점수
+
+  - sign + exponent (8 bits) + fraction (23 bits)
+
+    - sign: 31번째
+    - exponent: 23~30번째
+    - fraction: 0~22번째 ; Sgnificand 중에서 소수점 아래 부분
+
+  - 0.15625 = 0b0111110001000000000000000000000
+
+    - (+1) X 2^(124-127) X (1 + 2^-2)
+
+      = +0.125 X 1.25
+
+      = +0.15625
+
+- 범위 비교
+
+  - 4 byte 정수 범위
+
+    - -2,147,438,648 ~ 2,147,438,647
+
+      대략 -2.14 X 10^9 ~ 2.14 X 10^9
+
+  - 4 byte 부동 소수점수 범위
+
+    - 대략 -3.4 X 10^38 ~ 3.4 X 10^38
+
+      10진수 유효숫자 6개 - 정확도를 보장 할 수 있는 자리수가 6개
+
+
+
+```c
+#include <stdio.h>
+#include <float.h>
+
+int main()
+{
+    printf("%u \n", sizeof(float));
+    printf("%u \n", sizeof(double));
+    printf("%u \n", sizeof(long double));
+    
+    float f = 123.456f;
+    double d = 123.456;
+    
+    float f2 = 123.456;
+    double d2 = 123.456f;
+    
+    int i = 3;
+    float f3 = 3.f; // 3.0f
+    double d3 = 3;  // 3.0
+
+    float f4 = 1.234e10f;
+    
+    float f5 = 0xb.aP1;
+    double d5 = 1.0625e0;
+    
+    printf("%f %F %e %E\n", f, f, f, f);
+    printf("%f %F %e %E\n", d, d, d, d);
+//    %f, %F: 실수 출력 // %e, %E: 과학적 표기법 출력
+    printf("%a %A\n", f5, f5);
+    printf("%a %A\n", d5, d5);
+//    %a, %A: 16진수 출력
+    
+    return 0;
+}
+```
+
+* long double
+  * long double 은 windows 에서 8byte, 64bit Linux, OS X 에서는 16byte
+* float f = 123.456f;
+  * float 형은 literal f 를 붙여주는게 좋다
+* double d = 123.456;
+  * double 형은 기본형이라서 literal 이 붙이 않아도 됨
+* float f2 = 123.456;
+  * 8byte 메모리의 double 을 float 에 대입하므로 정밀도 문제로 warning 발생    
+* 1.234e10f == 1.234 X 10^10 - 과학적 표기법
+
+
+
+##### 3.12 부동소수점형의 한계
+
+```c
+#include <stdio.h>
+#include <float.h>
+#include <math.h>
+
+int main()
+{
+    // round-off errors (ex1) - 너무 큰숫자와 상대적으로 작은 숫자의 합의 계산이 되지 않음
+    float a, b;
+    a = 1.0E20f + 1.0f;
+    b = a - 1.0E20f;
+    printf("%f\n", b);  // 0.000000
+    
+    // round-off errors (ex2) - 2진수를 사용하는 부동 소수점 표현법에서는 0.01 을 표기 하지 못함
+    float c = 0.0f;
+    for (int i = 0 ; i < 100; i++){
+        c = c + 0.01f;
+    }
+    printf("%f\n", c);  // 0.999999
+    
+    
+    // overflow
+    float max = 3.042823466e+38f;
+    printf("%f\n", max);
+    max = max * 100.0f;
+    printf("%f\n", max);    // inf 출력, infinite: 표현 할 수 없는 큰 숫자
+    
+    
+    // underflow
+    float min = 1.401298464e-45f;
+    printf("%e\n", min);
+    min = min / 2.0f;
+    printf("%e\n", min);    // 0.000000e+00 출력, subnormal: 부동 소숫점 형의 정밀도로 표현할수 없는 작은 숫자
+    
+    float f = 104.0f;
+    f = f/0.0f;
+    printf("%f\n", f); // inf 출력
+    
+    f = asinf(2.0f);    // arc sin
+    printf("%f\n", f);  // nan 출력, Not A Number: 수학적으로 존재하지 않는 값
+    
+    return 0;
+}
+```
+
+
+
+
+
+##### 3.13 불리언형 Boolean Type
+
+* 고전적인 C 문법에는 Bool type이 존재하지 않음.
+
+  * 최근 Bool type이 추가 됨: _Bool
+  * 1byte - 메모리 주소를 배정 받을 수 있는 최소 단위
+
+  ```c
+  
+  int main(){
+    _Bool b1;
+    
+    b = 0;	// false
+    b = 1;	// true
+    
+    return 0;
+  }
+  ```
+
+  
+
+* Header를 추가하여 사용 가능, <stdbool.h>
+
+  * Bool type을 bool 로 사용 가능
+
+  ```c
+  #include <stdbool.h>
+  
+  int main(){
+    bool b2, b3;
+    
+    b2 = true;	// true: 예약어 == 1
+    b3 = false;	// false: 예약어 == 0
+    
+    return 0;
+  }
+  ```
+
+  
+
+##### 3.14 복소수형 Complex Types
+
+```c
+#include <stdio.h>
+#include <complex.h>
+
+int main(){
+    double _Complex z = 1 + 2*I;
+    
+    z = 1 / z;
+    
+    printf("1 / (1.0 + 2.0i) = %.1f%+.1fi\n", creal(z), cimag(z));
+    
+    return 0;
+}
+```
+
+* gcc Compiler 기준 표현법
+* complex 의 경우 사용자의 편의에 따라 만들어 사용하는게 보편적
+
