210316|C따배씨 5강 완료 & 6강 시작 ~ 6.3

--- a/C:C++/따배씨/5_연산자&표현식&문장.md
+++ b/C:C++/따배씨/5_연산자&표현식&문장.md
@@ -190,6 +190,7 @@ int main(){
 * 표현식 트리 Expression Tree
 
   ![5_6_1_표현식트리](./imgs/5_6_1_표현식트리.png)
+
   * 컴퓨터 내부적으로 컴파일러가 수식을 그래프 구조로 만들어 우선순위를 파악하여 계산
 
 * 연산자의 우선순위 Operator precedence
@@ -314,3 +315,223 @@ int main(){
 ```
 
 * 증가/감소 연산자는 곱셈 나눗셈보다 우선순위가 높음
+
+
+
+##### 5.9 표현식 Expressions 과 문장 Statements
+
+* 표현식의 중요한 특징: 값을 계산해 냄, 값을 대입
+
+
+
+```c
+/* Statements */
+int x, y, apples;	// declaration statement
+apples = 3;				// assignment statement
+;								  // null statement
+x = 1 + (y = 5); // y = 5 is subexpression
+
+while (x++ < 10) // while statement (strucutred statements)
+  y = x + y;
+
+printf("%d\n", y); // function statement
+
+return 0;						// return statement
+```
+
+* Statement
+
+
+
+```c
+/* Side Effects and Sequence Points */
+x = 4;	// main intent is evaluating expressions
+y = 1 + x++;
+
+while (x++ < 10)	// (x++ < 10) is a full expression.
+  printf("%d\n", x);
+
+y = (4 + x++) + (6 + x++); // Not (4 + x++) nor (6 + x++) is a full expression.
+```
+
+* " ; " : Sequence Point, 표현식에 대한 계산 시작
+
+* ```c
+  y = (4 + x++) + (6 + x++);
+  ```
+
+  * 괄호안의 계산이 끝날때, x++ 연산이 동작할지, 전체 표현식의 계산이 끝나고 난 뒤 " ; " 에서 x++ 연산이 동작할지 애매함
+  * 애매하다는 표현은, 컴파일러마다 다른 판단을 내릴 가능성이 있다는 의미
+
+
+
+##### 5.10 순서도 Flowcharts
+
+##### 5.11 자료형 변환 Type conversions
+
+```c
+#include <stdio.h>
+
+int main(){
+    /* promotions in assignments */
+    short s = 64;
+    int i = s;
+    
+    float f = 3.14f;
+    double d = f;
+    
+    
+    return 0;
+}
+```
+
+* 작은 자료형을 큰 자료형에 대입
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    /* demotion in assignments */
+    float f = 3.14f;
+    double d = f;
+  
+  	d = 1.25;
+  	f = 1.25;
+  	f = 1.123;
+      
+    return 0;
+}
+```
+
+* 큰 자료형을 작은 자료형에 대입, Warning 발생
+  * 정확도(유효숫자)에 문제가 발생 할 수 있음
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    /* ranking of types in operations */
+    // long double > double > float
+    // unsigned long long, long long
+    // unsinged long, long
+    // unsigned, int
+    // shor int, unsinged short int
+    // signed char, char unsinged char
+    // _Bool
+    
+    double d = 1.2;
+    float f = 1.123f;
+    
+    d = f + 1.234;
+    f = f + 1.234;
+    
+    printf("%f\n", d);
+    printf("%f\n", f);
+    
+    return 0;
+}
+```
+
+
+
+```c
+/* automatic promotion of function arguments */
+// 1. Functions without prototypes
+// 2. Variadic functions (ellipsis)
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+  	/* casting operators */
+    double d = 1.2;
+    int i = 0;
+    
+    d = (double)3.14f;
+    i = 1.6 + 1.7;
+    printf("%d\n", i);
+    // 3
+    i = (int)1.6 + (int)1.7;
+    printf("%d\n", i);
+    // 2
+    return 0;
+}
+```
+
+* Casting operators: 자료형을 명시
+
+
+
+```c
+#include <stdio.h>
+
+int main(){
+    char c;
+    int i;
+    float f;
+    
+    f = i = c = 'A';
+    printf("%c %d %f\n", c, i, f);
+  	// A 65 65.000000
+    
+    c = c + 2;
+    i = f + 2 * c;
+    printf("%c %d %f\n", c, i, f);
+  	// C 199 65.000000
+    
+    c = 1106; // demolitions, 1106 = 0b10001010010, 0b01010010 = 1106 % 256 = 82 = 'R'
+    printf("%c\n", c);
+  	// R
+    c = 83.99;
+    printf("%c\n", c);
+  	// S
+    
+    return 0;
+}
+```
+
+
+
+##### 5.12 함수의 인수 Arguments 와 매개변수 Parameters
+
+```c
+#include <stdio.h>
+
+void draw(int n);   // ANSI function prototype declaration
+
+int main(){
+    int i = 5;
+    char c = '#';   // 35
+    float f = 7.1f;
+    
+    draw(i);
+  	// *****
+
+    draw((int)c);
+  	// ***********************************
+
+    draw((int)f);
+	  // *******
+    
+    return 0;
+}
+
+void draw(int n)
+{
+    while(n-->0){
+        printf("*");
+    }
+    printf("\n");
+}
+```
+
+* Arguments vs. Parameters
+  * actual argument, actual parameter -> argument (values)
+  * formal argument, formal parameter -> parameter (variables)
