--- a/C:C++/따배씨/6_반복문.md
+++ b/C:C++/따배씨/6_반복문.md
@@ -120,3 +120,472 @@ int main(){
 ```
 
 * 읽기 편하고 명확하게 표현하는 코드가 좋은 코드
+
+
+
+##### 6.4 관계 연산자 Relational Operators
+
+* 관계 연산자 Relational Operators
+  *  <    is less than
+  * <=   is less than or equal to
+  * ==   is equal to
+  * \>=   is grater than or equal to
+  *  \>    is gratr than
+  * !=   is not equal to
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    
+    int n = 0;
+    while (n++ < 5)     // n ++ < 5 is a relational expression
+        printf("%d", n);
+    // 12345
+    printf("\n");
+    
+    char c = 'A';
+    while (c != 'Z')
+        printf("%c", c++);
+  	// ABCDEFGHIJKLMNOPQRSTUVWXY
+    
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+#include <math.h>   //fabs() - 절대값 호출
+
+int main()
+{
+    const double PI = 3.14159265358979;
+    double guess = 0.0;
+    
+    printf("Input PI : ");
+    scanf("%lf", &guess);
+    
+//    while (guess != PI)
+    while (fabs(guess - PI) > 0.01)
+    {
+        printf("Fool! Try again!\n");
+        scanf("%lf", &guess);
+    }
+    
+    printf("Good!\n");
+    return 0;
+}
+```
+
+* fabs() 함수를 이용하여 실수 비교의 오차범위를 설정
+  * 정수의 비교가 아닌, 실수의 비교시에는 정밀도 문제가 발생하기 때문에 오차범위를 설정해 주는게 좋다
+
+
+
+##### 6.5 사실과 거짓 True and False
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    int tv, fv;
+    tv = (1 < 2);
+    fv = (1 > 2);
+    
+    printf("True is %d\n", tv);
+  	// True is 1
+    printf("False is %d\n", fv);
+  	// False is 0
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    int i = -5;
+    
+    while (i)
+        printf("%d is true\n", i++);
+  			// -5 is true
+    		// -4 is true
+    		// -3 is true
+    		// -2 is true
+    		// -1 is true
+    printf("%d is flase\n", i);
+  // 0 is flase
+    return 0;
+}
+```
+
+* 0 == false, 0 != true
+
+
+
+##### 6.6 _Bool 자료형
+
+* 고전적인 C 언어에서는 정수형을 이용하여 True/False 를 다루었음
+  * _Bool 자료형은 새로 추가됨
+  * 기존의 코드들과의 호환성을 위하여 _Bool 자료형으로 표기
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    _Bool boolean_true = (2 > 1);
+    _Bool boolean_false = (1 > 2);
+    
+    printf("True is %d \n", boolean_true);
+  	// True is 1
+    printf("False is %d \n", boolean_false);
+  	// Flase is 0
+    
+    printf(boolean_true ? "true" : "false");
+  	// true
+    printf("\n");
+    printf(boolean_false ? "true" : "false");
+  	// flase
+    return 0;
+}
+```
+
+* printf(조건 ? True : False) - 삼항연산자
+
+
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main()
+{
+    bool bt = true;
+    bool bf = false;
+    
+
+    printf("True is %d\n", bt);
+  	// True is 1
+    printf("False is %d\n", bf);
+  	// False is 0
+  
+    return 0;
+}
+```
+
+* stdbool.h
+
+  * ```c
+    #define bool _Bool
+    #define true 1
+    #define false 0
+    ```
+
+
+
+##### 6.7 관계연산자 우선순위
+
+##### 6.8 for 루프 소개
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    // Counting loop
+    for (int i = 1; i <= 10; i++)
+        printf("%d", i);
+  	// 12345678910
+    
+    return 0;
+}
+```
+
+
+
+##### 6.9 for 문의 유연한 사용
+
+```c
+#include <stdio.h>
+
+int main()
+{
+		/*
+				for (initialize; test; update)
+					statement
+		*/
+  
+  	for (int i = 10; i > 0; i--)
+      	printf("%d", i);
+    
+  	for (int i = 0; i < 100; i = i + 8)
+      	printf("%d", i);
+  
+    for (char c = 'A'; c <= 'Z'; c++)
+      	printf("%c" c);
+  
+    for (int i = 0; i * i < 10; i++)
+      	printf("%d", i);
+  
+    for (int x = 1, y = 5; y < 20; y = (++x * 3) + 10)
+      	printf("%d", x);
+  
+	  for (double d = 100.0; d < 300; d = d * 1.1)
+  	    printf("%d", i);
+  
+  	int i, n;
+  	n = 2;
+  	for (i = 2; n < 10; /* left blank */)
+    {
+      n = n * i;
+      pritnf("%d\n", n);
+    }
+  
+  	for(;;) // == while(1)
+      printf("I love you!");
+    
+    int i = 0;
+	  for (printf("Let's go\n"); i != 7; scanf("%d", &i))
+      ; // null statement
+  
+    return 0;
+}
+```
+
+* 활용 예제일 뿐, 복잡한 코드는 좋은코드는 아님!
+
+
+
+##### 6.10 다양한 대입 연산자들 (그리고 어셈블리 코드 확인법)
+
+##### 6.11 콤마 Comma 연산자
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    int i, j;
+    i = 1;
+    i++, j = i; // Comma is a sequence point
+    printf("%d %d\n", i, j);
+    // 2 2
+    
+    int x, y, z;
+    z = x = 1, y = 2;
+    printf("x=%d, y=%d, z=%d\n", x, y, z);
+    // x=1, y=2, z=1
+    
+    z = (x = 1), (y = 2);
+    printf("x=%d, y=%d, z=%d\n", x, y, z);
+    // x=1, y=2, z=1
+    
+    z = ((x = 1), (y = 2));
+    printf("x=%d, y=%d, z=%d\n", x, y, z);
+    // x=1, y=2, z=2
+    
+    return 0;
+}
+```
+
+* ```c
+  z = ((x = 1), (y = 2));
+  ```
+  * ((x = 1), (y = 2)) 의 값은 " , " 뒤의 값인 (y = 2) 가 됨
+    * z = (y = 2)
+
+
+
+##### 6.12 제논의 역설 시뮬레이션 예제
+
+* ''아킬레우스는 거북이를 따라잡을 수 없다'' 는 역설
+  * 무한 등비급수로 패러독스 해결
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    const double spped = 1.0;
+    const unsigned repeat_max = 100;
+    
+    double dt = 1.0;
+    double time = 0.0;
+    double dist = 0.0;
+    
+    for (unsigned i = 0; i < repeat_max; ++i)
+    {
+        dist += spped * dt; // dist = dist + speed * dt;
+        time  += dt;
+        
+        printf("Elapsed time = %.10fs, Distance = %.10fm\n", time, dist);
+        
+        dt *= 0.5; // 나누기보다 곱하기 연산이 더 빠름
+    }
+    return 0;
+}
+```
+
+
+
+##### 6.13 탈출조건 루프 do while
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    const int password = 1234;
+    int guess = 0;
+  
+    printf("Enter secret code : ");
+    scanf("%d", &guess);
+    
+  	while (guess != password)
+    {
+      printf("Enter secret code : ");
+      scanf("%d", &guess);
+    }
+    
+    printf("Good!");
+    
+    return 0;
+}
+```
+
+
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    const int password = 1234;
+    int guess = 0;
+    do
+    {
+        printf("Enter secret code : ");
+        scanf("%d", &guess);
+    }
+    while (guess != password);
+    
+    printf("Good!");
+    
+    return 0;
+}
+```
+
+* do while 문으로 작성
+
+
+
+##### 6.14 어떤 루프를 사용할까?
+
+* 진입조건 while, for
+* 탈출조건 do while
+
+
+
+##### 6.15 중첩된 루프들 Nested
+
+##### 6.16 배열 Array 과 런타임 에러 Runtime error
+
+```c
+#include <stdio.h>
+
+#define NUM_DAYS 365
+
+int main()
+{
+    char my_chars = "Hello, World!";
+    
+    int daily_temperature[NUM_DAYS];
+    double stock_prices_history[NUM_DAYS];
+    
+    printf("%zd\n", sizeof(stock_prices_history));
+    // 2920
+    printf("%zd\n", sizeof(double) * NUM_DAYS);
+    // 2920
+    printf("%zd\n", sizeof(stock_prices_history[0]));
+    // 8
+    
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    int my_numbers[5];
+    
+    my_numbers[0] = 1;  // subscripts, indices, offsets
+    my_numbers[1] = 3;
+    my_numbers[2] = 4;
+    my_numbers[3] = 2;
+    my_numbers[4] = 1024;
+    
+    printf("%d\n", my_numbers[0]);
+    // 1
+    printf("%d\n", my_numbers[1]);
+    // 3
+    printf("%d\n", my_numbers[2]);
+    // 4
+    printf("%d\n", my_numbers[3]);
+    // 2
+    printf("%d\n", my_numbers[4]);
+    // 1024
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+int main()
+{
+    int my_numbers[5];
+    
+    my_numbers[0] = 1;  // subscripts, indices, offsets
+    my_numbers[1] = 3;
+    my_numbers[2] = 4;
+    my_numbers[3] = 2;
+    my_numbers[4] = 1024;
+    
+    /* Runtime Error */
+    my_numbers[5] = 123;    // out of bound
+    
+    my_numbers = 10;    // Compile error
+    
+    printf("%d", my_numbers[10]);   // out of bound
+    return 0;
+}
+
+```
+
+* Out of bound 의 경우 Runtime 단계에서 Error 발생
+  * Compile time 과 Runtime 모두에서 Errorr 가 없는 프로그램을 작성하여야 한다
+
+
+
+##### 6.17 for 루프를 배열과 함께 사용하기
+
