210318|C따배씨 6강 완료&&7강 Start ~ 7.2

--- a/C:C++/따배씨/6_반복문.md
+++ b/C:C++/따배씨/6_반복문.md
@@ -589,3 +589,85 @@ int main()
 
 ##### 6.17 for 루프를 배열과 함께 사용하기
 
+```c
+#include <stdio.h>
+
+#define SIZE 5
+
+int main()
+{
+    int my_array[SIZE];
+    
+    for (int i = 0; i < SIZE; i++)
+        my_array[i] = i;
+    
+    for (int i = 0; i < SIZE; i++)
+        printf("%d\n", my_array[i]);
+  	// 0
+		// 1
+		// 2
+		// 3
+		// 4
+  
+    return 0;
+}
+```
+
+
+
+```c
+#include <stdio.h>
+
+#define SIZE 5
+
+int main()
+{
+    int enter_nums[SIZE], sum = 0, i;
+    
+    printf("Enter %d numbers : ", SIZE);
+    
+    for (i = 0; i < SIZE; i++){
+        scanf("%d", &enter_nums[i]);
+        sum += enter_nums[i];
+    }
+    
+    printf("%d\n", sum);
+    
+    return 0;
+}
+```
+
+
+
+##### 6.18 루프 안에서 함수의 반환값 사용하기
+
+```c
+#include <stdio.h>
+
+int compute_pow(int base, int exp);
+
+int main()
+{
+    int base, exp;
+    while(scanf("%d %d", &base, &exp) == 2){
+		//	result = 1;
+		//
+		//	for (i = 0; i < exp; ++i)
+		//	result *= base;
+        
+        printf("Result = %d\n", compute_pow(base, exp));
+    }
+    return 0;
+}
+
+int compute_pow(int base, int exp)
+{
+    int result = 1;
+
+    for (int i = 0; i < exp; ++i)
+        result *= base;
+    
+    return result;
+}
+```
+
